--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #本地连接可以省略该行，非本地配置改对应ip
-#spring.neo4j.uri=neo4j://localhost:7687
+spring.neo4j.uri=bolt://localhost:7687/neo4j
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=123
 
