--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-
 spring.neo4j.uri=bolt://localhost:7687/neo4j
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=123
-
-
 server.port=6868
+#server.port=6868
 server.context-path=/
 server.tomcat.uri-encoding=UTF-8
+
+
