--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,24 @@
             <artifactId>spring-data-neo4j</artifactId>
             <version>6.0.2</version>
         </dependency>
+        <!--        Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+         <!-- jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+
     </dependencies>
+
 
     <build>
         <plugins>
@@ -244,3 +261,4 @@
     </build>
 
 </project>
+
